added last page

--- a/products.html
+++ b/products.html
@@ -114,6 +114,7 @@ body {
 	  <a href="index.html">Home </a>
 		<a href="about.html">About Us</a>
 		<a href="products.html">Products</a>
+    <a href="Information.html">Additional Information</a>
 
 </div>
 
@@ -137,11 +138,25 @@ body {
     <p>
      For more information on these or any other products please visit us in stores or call us at +353-855-555-169
       </p>
-    <p>All technologies and 
-        images are owned soley by the copyright holders.</p>
-    <br>
+   
 
   </div>
+</div>
+
+<div class="footer">
+  <div class="navbar">
+  
+    <a href="index.html">Home </a>
+    <a href="about.html">About Us</a>
+    <a href="products.html">Products</a>
+    <a href="Information.html">Additional Information</a>
+    
+  </div>
+  <h1>Gracious Gates ©</h1>
+  <p>All technologies and 
+   images are owned soley by the copyright holders. </p>
+
+  
 </div>
 
 
