--- a/Information.html
+++ b/Information.html
@@ -33,33 +33,14 @@
 		<a href="index.html">Home </a>
 		<a href="about.html">About Us</a>
 		<a href="products.html">Products</a>
-		<a href="Information.html">Additional Information</a>
+        <a href="Information.html">Additional Information</a>
 		
 	</div>
     <!-- Section 2  -->
-    <div class="act2">
+    <div class="act1">
 
 
-		<h2 id="section1">MAKING YOUR HOME A SAFER PLACE</h2>
- 
-		<p>
-			Using our patented technologies we have designed multiple 
-			award winning gates and security services. </p>
-		</p>
-		
-		<img class="fright" src="media\key-fob.jpg" alt="KeyFob" width=20% height=20%>
-		
-
- 
-
-
-		<h3 id="section2">WHAT IS A SMART HOME?</h3>
-		<p>
-			A smart home is one in which most of the house hold chores can be assited by a machines,
-			</p>
-			 <p>like smart bulbs, thermometers and our gates. Using our patented technologies we have designed multiple 
-				award winning gates and security services.</p>
-		<p id="demo"></p>
+		<iframe width="1120" height="630" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		
   
   
@@ -70,7 +51,6 @@
   
 
 
-	<!-- Footer-->
 	<div class="footer">
 		<div class="navbar">
 		
