--- a/about.html
+++ b/about.html
@@ -114,6 +114,7 @@ body {
   <a href="index.html">Home </a>
   <a href="about.html">About Us</a>
   <a href="products.html">Products</a>
+  <a href="Information.html">Additional Information</a>
 
 </div>
 
@@ -143,6 +144,22 @@ body {
     <br>
 
   </div>
+</div>
+
+<div class="footer">
+  <div class="navbar">
+  
+    <a href="index.html">Home </a>
+    <a href="about.html">About Us</a>
+    <a href="products.html">Products</a>
+    <a href="Information.html">Additional Information</a>
+    
+  </div>
+  <h1>Gracious Gates ©</h1>
+  <p>All technologies and 
+   images are owned soley by the copyright holders. </p>
+
+  
 </div>
 
 
