--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
 <!-- name of webpage. -->
 
 <meta charset="UTF-8">
+<meta name="description" content="A smart home gate website">
+<meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
+<meta name="author" content="Jake Smith">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+<title>About Us</title>
 <style>
 * {
   box-sizing: border-box;
@@ -81,7 +86,7 @@ body {
 .footer {
   padding: 1px;
   text-align: center;
-  background: rgb(139, 3, 3);
+  background: rgb(99, 107, 180);
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -106,6 +111,7 @@ body {
 <div class="header">
   <h1>Gracious Gates</h1>
   <p>We protect your home with technology</p>
+  
 </div>
 
 
