--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="description" content="A smart home gate website">
+	<meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
+	<meta name="author" content="Jake Smith">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 	<!-- Appears on the tab in the browser -->
@@ -12,6 +15,14 @@
 
 	<!-- imports CSS Style Sheet -->
 	<link rel="stylesheet" type="text/css" href="css\style.css">
+
+	
+	
+	<meta name="description" content="Free Web tutorials">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name="author" content="John Doe">
+	
+	
 
 
 
