--- a/products.html
+++ b/products.html
@@ -4,7 +4,12 @@
 <!-- name of webpage. -->
 
 <meta charset="UTF-8">
+<meta name="description" content="A smart home gate website">
+<meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
+<meta name="author" content="Jake Smith">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+<title>Products</title>
 <style>
 * {
   box-sizing: border-box;
@@ -81,23 +86,9 @@ body {
 .footer {
   padding: 1px;
   text-align: center;
-  background: rgb(190, 90, 90);
+  background: #b65a5a;
 }
 
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width:100%;
-  }
-}
 </style>
 </head>
 <body>
@@ -106,6 +97,7 @@ body {
 <div class="header">
   <h1>Gracious Gates</h1>
   <p>We protect your home with technology</p>
+  <link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 </div>
 
 
@@ -124,20 +116,28 @@ body {
     <h2>Our Products</h2>
     <h5>Prices may vary dependant on region</h5>
     <p>
-      Automatic Sliding Gates €200 + Installation fees
+      Automatic Sliding Gates
         </p>
     <img src="media\automatic-gates-1.jpg" width=30% height=30%>
     <p>
-        Airport Security Gates €350 - €475 per gate + Installation fees
+        Airport Security Gates
           </p>
     <img src="media\airport.jpg" width=30% height=30%>
     <p>
-        General Use Smart Gates €100 - €250 + Installation fees
+        General Use Smart Gates
           </p>
     <img src="media\regular.jpg" width=30% height=30%>
+
+    <ul style="list-style-type:square;">
+      <li>Automatic Sliding Gates €200 + Installation fees</li>
+      <li>Airport Security Gates €350 - €475 per gate + Installation fees</li>
+      <li>General Use Smart Gates €100 - €250 + Installation fees</li>
+    </ul>
     <p>
      For more information on these or any other products please visit us in stores or call us at +353-855-555-169
       </p>
+
+      
    
 
   </div>
@@ -156,7 +156,7 @@ body {
   <p>All technologies and 
    images are owned soley by the copyright holders. </p>
 
-  
+   
 </div>
 
 
