--- a/Information.html
+++ b/Information.html
@@ -3,10 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="description" content="A smart home gate website">
+	<meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
+	<meta name="author" content="Jake Smith">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 	<!-- Appears on the tab in the browser -->
-	<title>Gracious Gates </title>
+	<title>Additional Information</title>
 
 
 
@@ -40,10 +43,50 @@
     <div class="act1">
 
 
-		<iframe width="1120" height="630" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+		<iframe width="1000" height="500" src="https://www.youtube.com/embed/i3LNgFI-vys?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		
+		<h2>
+			Our Staff
+		</h2>
   
-  
+		<table>
+			<tr>
+			  <th>CEO</th>
+			  <th>Public Relations</th>
+			  <th>Security</th>
+			</tr>
+			<tr>
+			  <td>Jon</td>
+			  <td>Jhon</td>
+			  <td>John</td>
+			</tr>
+			<tr>
+			  <td>56</td>
+			  <td>22</td>
+			  <td>44</td>
+			</tr>
+		</table>
+
+		<h2>
+			Images & Videos Used (In Order Of Apperance)
+		</h2>
+
+		<ol type="1">
+			<li><a href="https://isorepublic.com/photo/abstract-geometric-background-purple/">Header Background </a></li>
+			<li><a href="https://www.rawpixel.com/image/6040341/black-car-key-free-public-domain-cc0-photo">Key Fob </a></li>
+			<li><a href="https://www.flaticon.com/free-icon/gate_218210">Gate Icon </a></li>
+			<li><a href="https://www.istockphoto.com/photos/automatic-gates">Automatic Gates </a></li>
+			<li><a href="https://www.istockphoto.com/photos/airport-gate">Airport Gates </a></li>
+			<li><a href="index.html">Home </a></li>
+			<li><a href="index.html">Home </a></li>
+
+		  </ol>
+
+		<h2>Where we are located</h2>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d291570.84439710964!2d-2.076008085972876!3d55.185067599999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487de1dc1d15e2db%3A0x64b918b604b463c4!2sCockshot%20Wood!5e0!3m2!1sen!2sie!4v1681762510976!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
   
 		
 	</div>
