--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
 <meta name="author" content="Jake Smith">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+<link rel="icon" type="image/x-icon" href="media/png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 <title>About Us</title>
 <style>
 * {
@@ -129,28 +129,30 @@ body {
   <div class="main">
     <h2>ABOUT US</h2>
     <h5>Founded in 1989</h5>
-    <img src="media\Buisnessmen.jpg" width=30% height=30%>
+    <img src="media/Buisnessmen.jpg" alt="Buisnessmen" width=30% height=30%>
     <p>
       We spend most of our time maintaining a solid caffeine buzz and looking for new ways to inovate our products.
-      </p>
     </p>
+    <p>
       We specialise in minimalistic design. Within our designs we value simplicity,
       symmetry and detail. 
-      </p>
-    </p>Whether we're designing gates, branding, or websites we always strive for beauty.
-      </p>Helping people set their gardens apart in a beautiful way. We employ people from all backgrounds, there is no discrimination, we strive to make an inviting work enviroment for everyone involved.
-      </p>
-    </p> Currently located in Ireland we are accepting new design opportunities both locally and internationally.
-      </p>
-    </p>Don't hesitate to get in touch. Let's make our homes more secure together!
-      </p>
+    </p>
+    <p>Whether we're designing gates, branding, or websites we always strive for beauty.
+    </p>
+    <p>
+      Helping people set their gardens apart in a beautiful way. We employ people from all backgrounds, there is no discrimination, we strive to make an inviting work enviroment for everyone involved.
+    </p>
+    <p> Currently located in Ireland we are accepting new design opportunities both locally and internationally.
+    </p>
+    <p>Don't hesitate to get in touch. Let's make our homes more secure together!
+    </p>
 
-  </p>
+  
     <p>We hope to see you soon!!</p>
     <br>
 
   </div>
-</div>
+
 
 <div class="footer">
   <div class="navbar">
