--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -7,20 +7,14 @@
 	<meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
 	<meta name="author" content="Jake Smith">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+	<link rel="icon" type="image/x-icon" href="media/png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 	<!-- Appears on the tab in the browser -->
 	<title>Gracious Gates </title>
 
 
 
 	<!-- imports CSS Style Sheet -->
-	<link rel="stylesheet" type="text/css" href="css\style.css">
-
-	
-	
-	<meta name="description" content="Free Web tutorials">
-	<meta name="keywords" content="HTML, CSS, JavaScript">
-	<meta name="author" content="John Doe">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	
 
@@ -33,7 +27,7 @@
 	<div class="header">
 		
 		<h1>Gracious Gates</h1>
-		<img src="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png" width=30% height=30%>
+		<img src="media/png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png" alt="Gate" width=30% height=30%>
 		<p id="headerp"><b> Live with peace of mind </b></p>
 		
 	</div>
@@ -55,10 +49,11 @@
  
 		<p>
 			Using our patented technologies we have designed multiple 
-			award winning gates and security services. </p>
+			award winning gates and security services.
 		</p>
 		
-		<img class="fright" src="media\key-fob.jpg" alt="KeyFob" width=20% height=20%>
+		
+		<img class="fright" src="media/key-fob.jpg" alt="KeyFob" width=20% height=20%>
 		
 
  
