--- a/Information.html
+++ b/Information.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -7,14 +7,14 @@
 	<meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
 	<meta name="author" content="Jake Smith">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+	<link rel="icon" type="image/x-icon" href="media/png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 	<!-- Appears on the tab in the browser -->
 	<title>Additional Information</title>
 
 
 
 	<!-- imports CSS Style Sheet -->
-	<link rel="stylesheet" type="text/css" href="css\style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 
 
@@ -25,7 +25,7 @@
 	<div class="header">
 		
 		<h1>Gracious Gates</h1>
-		<img src="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png" width=30% height=30%>
+		<img src="media/png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png" alt="Gate" width=30% height=30%>
 		<p id="headerp"><b> Live with peace of mind </b></p>
 		
 	</div>
@@ -44,7 +44,7 @@
 
 
 
-		<iframe width="1000" height="500" src="https://www.youtube.com/embed/i3LNgFI-vys?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="1000" height="500" src="https://www.youtube.com/embed/i3LNgFI-vys?start=1" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		
 		<h2>
 			Our Staff
@@ -78,8 +78,8 @@
 			<li><a href="https://www.flaticon.com/free-icon/gate_218210">Gate Icon </a></li>
 			<li><a href="https://www.istockphoto.com/photos/automatic-gates">Automatic Gates </a></li>
 			<li><a href="https://www.istockphoto.com/photos/airport-gate">Airport Gates </a></li>
-			<li><a href="index.html">Home </a></li>
-			<li><a href="index.html">Home </a></li>
+			<li><a href="https://www.gatemaster.ie/residential-gate-automation">General use Gate</a></li>
+			<li><a href="https://www.youtube.com/embed/i3LNgFI-vys?start=1">Airport security gate video </a></li>
 
 		  </ol>
 
