--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="HTML, CSS, JavaScript, Smart Home, Gates, Smart Gates, Smart, Home, Web Design">
 <meta name="author" content="Jake Smith">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+<link rel="icon" type="image/x-icon" href="media/png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
 <title>Products</title>
 <style>
 * {
@@ -97,7 +97,7 @@ body {
 <div class="header">
   <h1>Gracious Gates</h1>
   <p>We protect your home with technology</p>
-  <link rel="icon" type="image/x-icon" href="media\png-transparent-golden-door-pattern-door-iron-gate-golden-gate.png">
+  
 </div>
 
 
@@ -118,17 +118,17 @@ body {
     <p>
       Automatic Sliding Gates
         </p>
-    <img src="media\automatic-gates-1.jpg" width=30% height=30%>
+    <img src="media/automatic-gates-1.jpg" alt="Automatic" width=30% height=30%>
     <p>
         Airport Security Gates
           </p>
-    <img src="media\airport.jpg" width=30% height=30%>
+    <img src="media/airport.jpg" alt="Airport" width=30% height=30%>
     <p>
         General Use Smart Gates
           </p>
-    <img src="media\regular.jpg" width=30% height=30%>
+    <img src="media/regular.jpg" alt="General" width=30% height=30%>
 
-    <ul style="list-style-type:square;">
+    <ul style="list-style-type:none;">
       <li>Automatic Sliding Gates €200 + Installation fees</li>
       <li>Airport Security Gates €350 - €475 per gate + Installation fees</li>
       <li>General Use Smart Gates €100 - €250 + Installation fees</li>
@@ -141,7 +141,7 @@ body {
    
 
   </div>
-</div>
+
 
 <div class="footer">
   <div class="navbar">
